Fixed horizontal overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,7 @@ body {
   background-color: $background-color;
   height: 100%;
   margin: 0;
+  overflow-x: hidden;
 }
 
 code {
